--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.5",
+    "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "sass": "^1.69.5",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
+  },
+  "dependencies": {
+    "three": "^0.159.0"
   }
 }
