--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/cannon": "^0.1.12",
     "@types/node": "^20.10.5",
     "@types/three": "^0.159.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
@@ -19,6 +20,7 @@
     "vite": "^5.0.8"
   },
   "dependencies": {
+    "cannon": "^0.6.2",
     "gsap": "^3.12.4",
     "lil-gui": "^0.19.1",
     "three": "^0.159.0"
